src/test/deca/syntax/invalid/resultats/test2_empty-lex.res
'}': [@0,289:289='}',<37>,14:0]
